syntax = "proto3";

package trailbox.users;

option go_package = "trailbox/gen/users;users";

import "common.proto";

service Users {
  rpc GetUser(trailbox.common.UserId) returns (User);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
}

message ListUsersRequest {}
message ListUsersResponse {
  repeated User users = 1;
}
